--- a/index.html
+++ b/index.html
@@ -4,41 +4,53 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet">
+
+  <!-- CSS Stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  
   <link href="css/styles.css" rel="stylesheet">
-  
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/edb0f741e9.js" crossorigin="anonymous"></script>
+
+  <!-- Bootstrap Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
   
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <section id="title">
+    <div class="container-fluid">
 
     <!-- Nav Bar -->
 
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="">Tindog</a>
+
+      <a class="navbar-brand" href="">tindog</a>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-      <ul class="navbar-nav ml-auto">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+            <a class="nav-link" href="">Contact</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+            <a class="nav-link" href="">Pricing</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+            <a class="nav-link" href="">Download</a>
           </li>
-      </ul>
-    </div>
+        </ul>
+      </div>
     </nav>
 
 
@@ -48,30 +60,42 @@
     <div class="row">
       <div class="col-lg-6">
         <h1>Meet new and interesting dogs nearby.</h1>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
+        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
       </div>
       <div class="col-lg-6">
-        <img src="images/iphone6.png" alt="iphone-mockup">
+        <img class="iphone" src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
-
+    
+    </div>
   </section>
 
 
   <!-- Features -->
 
   <section id="features">
+    <div class="row">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+      <div class="feature-box col-lg-4">
+      <div class="icons"><i class="fas fa-check-circle fa-4x"></i></div>
+      <h3>Easy to use.</h3>
+      <p>So easy to use, even your dog could do it.</p>
+      </div>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+      <div class="feature-box col-lg-4">
+      <div class="icons"><i class="fas fa-bullseye fa-4x"></i></div>
+      <h3>Elite Clientele</h3>
+      <p>We have all the dogs, the greatest dogs.</p>
+      </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+      <div class="feature-box col-lg-4">
+      <div class="icons"><i class="fas fa-heart fa-4x"></i></div>
+      <h3>Guaranteed to work.</h3>
+      <p>Find the love of your dog's life or your money back.</p>
+      </div>
 
+    </div>
   </section>
 
 
