--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-6 iphone-div">
         <img class="iphone" src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
