--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="">Contact</a>
+            <a class="nav-link" href="#footer">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Pricing</a>
+            <a class="nav-link" href="#pricing">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Download</a>
+            <a class="nav-link" href="#cta">Download</a>
           </li>
         </ul>
       </div>
@@ -205,9 +205,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h2>Find the True Love of Your Dog's Life Today.</h2>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -215,6 +215,11 @@
   <!-- Footer -->
 
   <footer id="footer">
+    <i class="cc-icon fab fa-twitter"></i></div>
+    <i class="cc-icon fab fa-facebook"></i></div>
+    <i class="cc-icon fab fa-instagram"></i></div>
+    <i class="cc-icon fas fa-envelope"></i></div>
+    </div>
 
     <p>© Copyright 2018 TinDog</p>
 
