--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <section id="title">
+  <section id="title" class="colored-section">
     <div class="container-fluid">
 
     <!-- Nav Bar -->
@@ -59,7 +59,7 @@
 
     <div class="row">
       <div class="col-lg-6">
-        <h1>Meet new and interesting dogs nearby.</h1>
+        <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
         <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
       </div>
@@ -74,24 +74,24 @@
 
   <!-- Features -->
 
-  <section id="features">
-    <div class="row">
+  <section id="features" class="white-section">
+    <div class="row container-fluid">
 
       <div class="feature-box col-lg-4">
       <div class="icons"><i class="fas fa-check-circle fa-4x"></i></div>
-      <h3>Easy to use.</h3>
+      <h3 class="feature-title">Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
       </div>
 
       <div class="feature-box col-lg-4">
       <div class="icons"><i class="fas fa-bullseye fa-4x"></i></div>
-      <h3>Elite Clientele</h3>
+      <h3 class="feature-title">Elite Clientele</h3>
       <p>We have all the dogs, the greatest dogs.</p>
       </div>
 
       <div class="feature-box col-lg-4">
       <div class="icons"><i class="fas fa-heart fa-4x"></i></div>
-      <h3>Guaranteed to work.</h3>
+      <h3 class="feature-title">Guaranteed to work.</h3>
       <p>Find the love of your dog's life or your money back.</p>
       </div>
 
@@ -101,18 +101,18 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section id="testimonials" class="colored-section">
 
     <div id="testimonial-carousel" class="carousel slide" data-bs-interval="false">
       <div class="carousel-inner">
           
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <div class="carousel-item container-fluid active">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
@@ -137,7 +137,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section id="press" class="colored-section">
     <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-img" src="images/tnw.png" alt="tnw-logo">
     <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -148,9 +148,9 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="white-section">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="heading-section">A Plan for Every Dog's Needs</h2>
     <p class="pricing-pg">Simple and affordable price plans for your and your dog.</p>
 
     <div class="row text-center p-0">
@@ -203,26 +203,29 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section id="cta" class="colored-section">
+    <div class="container-fluid">
 
-    <h2>Find the True Love of Your Dog's Life Today.</h2>
+    <h2 class="heading-section">Find the True Love of Your Dog's Life Today.</h2>
     <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
     <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 
+    </div>
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-    <i class="cc-icon fab fa-twitter"></i></div>
-    <i class="cc-icon fab fa-facebook"></i></div>
-    <i class="cc-icon fab fa-instagram"></i></div>
-    <i class="cc-icon fas fa-envelope"></i></div>
+  <footer id="footer" class="white-section">
+    <div class="container-fluid">
+
+      <i class="cc-icon fab fa-twitter"></i>
+      <i class="cc-icon fab fa-facebook"></i>
+      <i class="cc-icon fab fa-instagram"></i>
+      <i class="cc-icon fas fa-envelope"></i>
+
+      <p>© Copyright 2018 TinDog</p>
     </div>
-
-    <p>© Copyright 2018 TinDog</p>
-
   </footer>
 
 
